--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,13 +1,13 @@
-$bodyBg: rgb(235, 235, 235); // Light gray background color
-$mainBg: white; // White background color
+$bodyBg: #5AC1FF; // Light gray background color
+$mainBg: rgb(233, 230, 230); // White background color
 $mainColor: #999; // Dodger blue accent color
 $txtColor: #333333; // Dark gray text color
 $purple: #8e44ad; // Deep purple accent color
 $orange: #000000; // Carrot orange accent color
-$white: #ffffff; // White background color
-$black: #333333; // Dark gray text color
-$green: #2ecc71; // Shamrock green accent color
-$red: #e74c3c; // Tomato red accent color
+$white: #ffffff;
+$black: #333333; 
+$green: #2ecc71; 
+$red: #e74c3c; 
 
 
 
@@ -17,7 +17,7 @@ $fontSizeNormal: 1.125rem;
 $fontSizeMedium: 1.25rem;
 $fontSizeLarge: 1.5625rem;
 
-$sideBarWidth: 300px;
+$sideBarWidth: 320px;
 $sideBarLogoHeight: 171px;
 $spacing: 48px;
 $mobileSpacing: 24px;
